--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ weight = 2
 [[menu.main]]
 identifier = "index"
 name = "Contenus"
-url = "/"
+url = "https://racheldijoux.github.io/DevoirFinalHNU/"
 weight = 1
 [[menu.main]]
 identifier = "print"
