--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,9 +1,9 @@
-auteur = "Auteur"
+auteur = "Frederick Douglass"
 bloctexte = "justify"
 copyright = "CC BY-NC-SA"
 couverture = "/uploads/couverture.png"
 description = "Description"
-edition = "Fabrique"
+edition = "LUX"
 format = "portrait"
 indentation = "oui"
 isbn = ""
@@ -15,4 +15,4 @@ quatrieme = "oui"
 readingtime = "oui"
 search = false
 soustitre = "Sous-titre"
-titre = "Titre"
+titre = "Mémoire d'un esclave"
