--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ weight = 1
 [[menu.main]]
 identifier = "print"
 name = "Impression"
-url = "/print"
+url = "https://racheldijoux.github.io/DevoirFinalHNU/print"
 weight = 3
 [outputs]
 home = ["HTML"]
