--- a/config.toml
+++ b/config.toml
@@ -10,12 +10,12 @@ weight = 2
 [[menu.main]]
 identifier = "index"
 name = "Contenus"
-url = "https://racheldijoux.github.io/DevoirFinalHNU/"
+url = "/"
 weight = 1
 [[menu.main]]
 identifier = "print"
 name = "Impression"
-url = "https://racheldijoux.github.io/DevoirFinalHNU/print"
+url = "/print"
 weight = 3
 [outputs]
 home = ["HTML"]
